# persona-shattering-lasr

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FA_REVIEW_HANDOFF.md  KNOWN_ISSUES.md  MariaInstrucitons.md  PLAN.md  PLAN_LORA_SCALING_EVAL.md  README.md  assistant-axis-dataset-extension-prompt.txt  desc.md  embedding_distance_histograms.py  fa.py  made_up_plot.py  not_made_up_plot.py  our_default_llm_judge_config.py  pyproject.toml  run_inference_editing.py  test-branch-protection.txt  tmp.jsonl  tmp.md  upload_checkpoints.py  upload_dataset.py  vis.py  visualise-embeddings-2.py  visualise-embeddings-working.py
.claude/commands/: expand-constitution.md  review-constitution.md
bloom-data/: behaviors.json  models.json  seed.yaml
bloom-data/configurable_prompts/: default.json
configs/: README.md  run_500samples_5epochs.yaml  toy_5samples.yaml  toy_model.yaml  toy_model_OpenRouterInf.yaml
data/: claude-generated-prompts-for-activations-generations.jsonl  neuroticism_v2_calibration.jsonl  trait_benchmark_con50_ext50.jsonl  trait_benchmark_ocean250.jsonl
data/judge_calibration/: agreeableness.jsonl  coherence.jsonl  coherence_old.jsonl  conscientiousness.jsonl  extraversion.jsonl  neuroticism.jsonl  openness.jsonl
data/ocean_open_ended/: agreeableness.jsonl  conscientiousness.jsonl  extraversion.jsonl  neuroticism.jsonl  openness.jsonl
datasets/: assistant-axis-extraction-questions-batch2.jsonl  assistant-axis-extraction-questions.jsonl  psychometric_questionnaire.json
datasets/psychometric_questionnaires/: f0_forced_choice_v1.json  psychometric_questionnaire_v1.json  psychometric_questionnaire_v3.json  psychometric_questionnaire_v4.json  psychometric_questionnaire_v5.json  psychometric_questionnaire_v6_fc_draft.json  psychometric_questionnaire_v7.json  psychometric_questionnaire_v7_fc_pair.json  trait_ocean_natural_v1.json  trait_ocean_v1.json  trait_ocean_v1_nolead.json
datasets/psychometric_seed_prompts/: v1xAA.jsonl
datasets/scenarios/: example.json  extraversion_pressure_v1.json  v1.json  v2.json  v2_ideation_brief.md
docs/: phased-rollout-approach-b.md  prompt-sweep-deferred.md
dump/: visualise_activation_capping.ipynb
dump/activation_capping_qualitative/: notebook.ipynb
dump/extract-ft-persona-vector/: 3_vectors.py  README.md  run_pipeline.sh  test_activation_extraction.py
dump/flatten_loras/: ocean_flattened_exploration.ipynb  visualise_nplus_reruns.ipynb
dump/investigate_lora_scaling_scores_by_text_group/: investigate.ipynb
dump/llm_judges/: README.md  calibrate.py  export_for_rating.py  generate_ambiguous_form.py  generate_rating_form.py  view_results.py
dump/locate-in-aa-landscape/: landscape_utils.py  load_and_visualize_vectors.ipynb  visualize_landscape.ipynb
dump/lora_downranking/: investigate_downranked_loras.ipynb
experiments/: __init__.py  compare_checkpoints.py  print_persona_eval_suite.py  run_500samples_5epochs.py  run_gen_edit_200.py  run_persona_eval_suite.py  test_inference_providers.py  toy_5samples.py  toy_model.py  toy_model_OpenRouter.py  toy_model_edit_train.py
paper/: CLAUDE.md  ClaudeChecklist.tex  MERGE_TODO.md  Makefile  checklist.tex  main.tex  neurips_2025.sty  references.bib
scaling/: eval_lora_scaling.py  plot_scaling.py
scripts/: README.md  edit_responses.py  load_data.py  run_double_lora_eval.py  run_inference.py  run_negative_lora_eval.py  run_tom_eval.py  run_training.py  run_validation_generation.py  setup_dev.sh  test_activation_extraction.py
scripts-dev/: __init__.py
scripts_dev/: README.md  __init__.py  lora_soup_generate.py  setup_dev.sh
src/: __init__.py  cli.py  config.py
src_dev/: README.md  __init__.py  sweep.py
(+2354 files in other folders)
