[project]
name = "persona-extraction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core ML (torch provided by system with CUDA)
    "numpy<2",  # Required for system torch compatibility
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "accelerate>=0.28",
    # APIs
    "anthropic>=0.25",
    "openai>=1.0",
    "httpx>=0.27",
    # Utils
    "pyyaml>=6.0",
    "click>=8.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "wandb>=0.16",
    "spacy>=3.0",
    "inspect-ai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipykernel",
    "seaborn",
    "matplotlib",
    "plotly",
    "nbformat>=4.2.0", # needed for plotly notebook outputs
    "scikit-learn>=1.3.0",
    "huggingface-hub>=0.20.0",
    "pylint>=4.0.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.pylint.typecheck]
ignored-modules = ["torch"]
