[project]
name = "persona-extraction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core ML (torch provided by system with CUDA)
    "numpy>=1.26",  # vllm 0.20+ requires numpy>=2; venv torch 2.8 also supports it
    # Qwen3.5 (qwen3_5) added in 5.2.x; vllm 0.20+ requires >=5.5.1 in the 5.x line.
    "transformers>=5.5.1,<6",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "accelerate>=0.28",
    # APIs
    "anthropic>=0.25",
    "openai>=1.0",
    "httpx>=0.27",
    # Utils
    "pyyaml>=6.0",
    "click>=8.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "wandb>=0.16",
    "huggingface-hub>=0.20.0",
    "spacy>=3.0",
    "inspect-ai>=0.3.0",
    "inspect-evals>=0.3.106",
    "matplotlib>=3.7",
    "scikit-learn>=1.3.0",
    "factor-analyzer>=0.5.1",
    "sentencepiece>=0.2.1",
    "vllm>=0.20",  # 0.20.0 ships qwen3_5 model executor
    # OCT pipeline deps (character and openrlhf must be installed separately
    # via pip — their repos have SSH git submodules that break uv sync)
    "deepspeed==0.18.0",
    "torchdata",
    "ninja",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipykernel",
    "seaborn",
    "matplotlib",
    "plotly",
    "nbformat>=4.2.0", # needed for plotly notebook outputs
    "pylint>=4.0.4",
]
ui = [
    "gradio>=4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "src_dev", "scripts_dev"]

[tool.pylint.typecheck]
ignored-modules = ["torch"]
